// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<SimpleModal
  header="component_report.unsubscribe"
  onClose={[MockFunction]}
  onSubmit={[Function]}
  size="small"
>
  <Component />
</SimpleModal>
`;

exports[`should render correctly: modal content 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-head"
  >
    <h2>
      component_report.unsubscribe
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <p>
      component_report.unsubscribe.description
    </p>
  </div>
  <div
    className="modal-foot"
  >
    <DeferredSpinner
      className="spacer-right"
      loading={false}
    />
    <SubmitButton
      disabled={false}
    >
      component_report.unsubscribe
    </SubmitButton>
    <ResetButtonLink
      onClick={[Function]}
    >
      cancel
    </ResetButtonLink>
  </div>
</form>
`;

exports[`should render correctly: modal content, success 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-head"
  >
    <h2>
      component_report.unsubscribe
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <Alert
      variant="success"
    >
      component_report.unsubscribe_success
    </Alert>
  </div>
  <div
    className="modal-foot"
  >
    <DeferredSpinner
      className="spacer-right"
      loading={false}
    />
    <Button
      onClick={[Function]}
    >
      close
    </Button>
  </div>
</form>
`;
